Bugfix: language were saved, but standart text were loaded on startup. now Main GUI loads text in Main_load

--- a/CustomerDatav03/CustomerData/English.resx
+++ b/CustomerDatav03/CustomerData/English.resx
@@ -127,7 +127,10 @@
     <value>Amount</value>
   </data>
   <data name="ballance" xml:space="preserve">
-    <value>Ballance</value>
+    <value>Balance</value>
+  </data>
+  <data name="btnGenerateID" xml:space="preserve">
+    <value>Generate ID</value>
   </data>
   <data name="cancel" xml:space="preserve">
     <value>Cancel</value>
